--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <head>
     <title>Press Start: Homepage</title>
     <link rel="stylesheet" type="text/css" href="style.css"/>
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">  
+    <link rel="shortcut icon" href="btn-start-normal.png" type="image/x-icon">  
 
 
 </head>
 <body>
     <header>
-        <img src="favicon.png" alt="Logo" style="width:40px;height:40px;">
+        <img src="btn-start-normal.png" alt="Logo" style="width:40px;height:40px;">
     <nav>  
         <ul>  
         <li>  
